hphp/hack/test/typecheck/array_unification/darray_to_vec_or_dict.php.exp
File "darray_to_vec_or_dict.php", line 11, characters 37-47:
Unbound name: `vec_or_dict` (Naming[2049])
File "darray_to_vec_or_dict.php", line 11, characters 37-47:
Too few type arguments for this type (Naming[2071])
File "darray_to_vec_or_dict.php", line 12, characters 10-11:
Invalid return type (Typing[4110])
  File "darray_to_vec_or_dict.php", line 11, characters 37-47:
  Expected `vec_or_dict`
  File "darray_to_vec_or_dict.php", line 11, characters 12-30:
  But got `dict<string, int>`
